Added black pages (servicing, contact etc) and Map on Rentals page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Cymour Cycling Company
+short: home
+bgimage: home/home_bg.jpg
 ---
 
 <section class="home">
@@ -34,6 +36,7 @@ title: Cymour Cycling Company
 			<li><div id="rides-wheel"></div><a href="/rides/" alt="Cycle rides for all age groups and expertise" onmouseover="rotateAnimation('rides-wheel',40,1);" onmouseout="stopAnimation(looper_rotate)">Join<br>a<br>Ride</a></li>
 		</ul>
 	</div>
+	
 </section>
 
 
