prepended relative links with {{site.baseurl}}

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@ bgimage: home/home_bg.jpg
 	</div> <!-- end of .banner -->
 	<div class="action-wrapper">
 		<ul class="action-buttons">
-			<li><div id="rentals-wheel"></div><a href="/rentals/" alt="Bicycle Rental in and around Pune" onmouseover="rotateAnimation('rentals-wheel',40,1);" onmouseout="stopAnimation(looper_rotate)">Rent<br>a<br>Bicycle</a></li>
-			<li><div id="servicing-wheel"></div><a href="/servicing/" alt="Doorstep Cycle Servicing in Pune" onmouseover="rotateAnimation('servicing-wheel',40,1);" onmouseout="stopAnimation(looper_rotate)">Book<br>a<br>Servicing</a></li>
-			<li><div id="rides-wheel"></div><a href="/rides/" alt="Cycle rides for all age groups and expertise" onmouseover="rotateAnimation('rides-wheel',40,1);" onmouseout="stopAnimation(looper_rotate)">Join<br>a<br>Ride</a></li>
+			<li><div id="rentals-wheel"></div><a href="{{site.baseurl}}/rentals/" alt="Bicycle Rental in and around Pune" onmouseover="rotateAnimation('rentals-wheel',40,1);" onmouseout="stopAnimation(looper_rotate)">Rent<br>a<br>Bicycle</a></li>
+			<li><div id="servicing-wheel"></div><a href="{{site.baseurl}}/servicing/" alt="Doorstep Cycle Servicing in Pune" onmouseover="rotateAnimation('servicing-wheel',40,1);" onmouseout="stopAnimation(looper_rotate)">Book<br>a<br>Servicing</a></li>
+			<li><div id="rides-wheel"></div><a href="{{site.baseurl}}/rides/" alt="Cycle rides for all age groups and expertise" onmouseover="rotateAnimation('rides-wheel',40,1);" onmouseout="stopAnimation(looper_rotate)">Join<br>a<br>Ride</a></li>
 		</ul>
 	</div>
 	
