added servicing page.

--- a/servicing.html
+++ b/servicing.html
@@ -2,4 +2,35 @@
 layout: default
 title: Door Step Cycle Servicing as well as walk-in service
 ---
+<section class="servicing">
+<h1>Cycle Maintenance Service</h1>	
+
+<p>
+	We offer world class cycle maintenance and repair services.
+</p>
+
+<div class="serviceplans">
+	<div class="servicetype">
+		<h2>Gold (&#8377 600)</h2>
+		<ul>
+			<li>Cleaning</li>
+			<li>Gear Setting</li>
+			<li>Brake Setting</li>
+			<li>Oiling</li>
+			<li>Wheel Alignment</li>
+		</ul>
+	</div>
+	<div class="servicetype">
+		<h2>Platinum (&#8377 1200)</h2>
+		<ul>
+			<li>Gold package</li>
+			<li>Gear wire (cleaning, oiling)</li>
+			<li>Brake wire (cleaning, oiling)</li>
+			<li>Ball Bearings (cleaning, greasing)</li>
+			<li>Hub axles (cleaning, greasing)</li>
+		</ul>
+	</div>
+</div>
+<h1 class="banner">Book a Doorstep Servicing</h1>
+</section>
 
