Updated packages (added silver package)

--- a/servicing.html
+++ b/servicing.html
@@ -3,34 +3,46 @@ layout: default
 title: Door Step Cycle Servicing as well as walk-in service
 ---
 <section class="servicing">
-<h1>Cycle Maintenance Service</h1>	
 
-<p>
-	We offer world class cycle maintenance and repair services.
-</p>
+<div class="banner">
+	<h1>Book a Cycle Servicing</h1>
+	<p>@yourDOORSTEP or @CymourSTORE</p>
+	<h1>{{site.phone}}</h1>
+</div>
 
 <div class="serviceplans">
-	<div class="servicetype">
-		<h2>Gold (&#8377 600)</h2>
-		<ul>
-			<li>Cleaning</li>
-			<li>Gear Setting</li>
-			<li>Brake Setting</li>
-			<li>Oiling</li>
-			<li>Wheel Alignment</li>
-		</ul>
-	</div>
 	<div class="servicetype">
 		<h2>Platinum (&#8377 1200)</h2>
 		<ul>
 			<li>Gold package</li>
-			<li>Gear wire (cleaning, oiling)</li>
-			<li>Brake wire (cleaning, oiling)</li>
-			<li>Ball Bearings (cleaning, greasing)</li>
-			<li>Hub axles (cleaning, greasing)</li>
+			<li>Deep Clean (Dismantling & reassembly)</li>
+			<li>Hubs and Bearings (cleaning & greasing)</li>
+			<li>Bottom Bracket (cleaning & greasing)</li>
+			<li>Gear and Brake Wire (cleaning & oiling)</li>
 		</ul>
 	</div>
+	<div class="servicetype">
+		<h2>Gold (&#8377 600)</h2>
+		<ul>
+			<li>Silver Package</li>
+			<li>Cycle Cleaning</li>
+			<li>Gears (degreasing & oiling)</li>
+			<li>Brakes (cleaning & tuning)</li>
+			<li>Wheel Alignment</li>
+		</ul>
+	</div>
+	<div class="servicetype">
+		<h2>Silver (&#8377 300)</h2>
+		<ul>
+			<li>Brakes Tuneup</li>
+			<li>Gears Tuneup</li>
+			<li>Pre-ride Checks</li>
+			<li>Safety Checks</li>
+			<li>Nut & Bolt tightening</li>
+		</ul>
+	</div>
+	
 </div>
-<h1 class="banner">Book a Doorstep Servicing</h1>
+
 </section>
 
