Added events page and relevant css

--- a/events.html
+++ b/events.html
@@ -2,4 +2,38 @@
 layout: default
 title: Cycling Events for Companies Businesses NGOs
 ---
+<section class="events"> 
+	<h1>Organise an Event</h1>
+	<p>
+		We excel in creating world class cycling events. We work with groups and companies on creating various cycling activities customized for their needs. The group can be as small as 10 people and as big as 500+, we can make it happen!
+	</p>
+	<img src="{{site.baseurl}}/img/events/slide1.jpg">
+	<p>For more details contact marketing@cymour.com | {{site.phone}}</p>
+	<div class="eventscontainer">
+		<div class="eventbox">
+			<h2>Our Offerings</h2>
+			<ul>
+				<li>Cycle Rallies</li>
+				<li>Short and Long Rides</li>
+				<li>Cycle Day</li>
+				<li>Heritage Cycle Rides</li>
+				<li>Cycle Expos</li>
+				<li>Cyclothons/Marathons</li>
+				<li>Running Activities</li>
+			</ul>
+		</div>
+		<div class="eventbox">
+			<h2>Our Expertise</h2>
+			<ul>
+				<li>Custom Event Design</li>
+				<li>Excellent Execution</li>
+				<li>Cycling Experts</li>
+				<li>Heritage Experts</li>
+				<li>Police Permissions</li>
+				<li>Route Control</li>
+				<li>Food Arrangements</li>
+			</ul>
+		</div>
 
+	</div>
+</section>
