Modified rentals page

--- a/rentals.html
+++ b/rentals.html
@@ -7,7 +7,7 @@ bgimage: rentals/rentals_bg.jpg) no-repeat 100% 0
 <section class="rentals">
 	<h1>Rent a Bicycle</h1>
 	<p>We currently rent bicycles from 5 locations in Pune. To check availability of bicycles please click on the location in the map.</p>
-	<div class="howtorent">
+	<!-- <div class="howtorent">
 		<ul>
 			<li>Choose A Rental station</li>
 			<li>Call for availability</li>
@@ -18,7 +18,7 @@ bgimage: rentals/rentals_bg.jpg) no-repeat 100% 0
 		 	<li class="steps"></li>
 		 	<li class="steps"></li>
 		 </ul> 
-	</div>
+	</div> -->
 	<h3>Cymour Cycle Rental Locations</h3> 
 	<div id="rentals-map"></div>
 
