Changed Rs. and font changes etc.

--- a/servicing.html
+++ b/servicing.html
@@ -9,20 +9,20 @@ title: Door Step Cycle Servicing as well as walk-in service
 	<p>@yourDOORSTEP or @CymourSTORE</p>
 	<h1>{{site.phone}}</h1>
 </div>
-
+<div class="imgbox"><img src="{{site.baseurl}}/img/servicing/tools.jpg" alt=""></div>
 <div class="serviceplans">
 	<div class="servicetype">
-		<h2>Platinum (&#8377 1200)</h2>
+		<h2>Platinum (Rs. 1200)</h2>
 		<ul>
 			<li>Gold package</li>
-			<li>Deep Clean (Dismantling & reassembly)</li>
-			<li>Hubs and Bearings (cleaning & greasing)</li>
+			<li>Deep Clean (Dismantling & assembly)</li>
+			<li>Hub & Bearings (cleaning & greasing)</li>
 			<li>Bottom Bracket (cleaning & greasing)</li>
-			<li>Gear and Brake Wire (cleaning & oiling)</li>
+			<li>Gear & Brake Wire (cleaning & oiling)</li>
 		</ul>
 	</div>
 	<div class="servicetype">
-		<h2>Gold (&#8377 600)</h2>
+		<h2>Gold (Rs. 600)</h2>
 		<ul>
 			<li>Silver Package</li>
 			<li>Cycle Cleaning</li>
@@ -32,7 +32,7 @@ title: Door Step Cycle Servicing as well as walk-in service
 		</ul>
 	</div>
 	<div class="servicetype">
-		<h2>Silver (&#8377 300)</h2>
+		<h2>Silver (Rs. 300)</h2>
 		<ul>
 			<li>Brakes Tuneup</li>
 			<li>Gears Tuneup</li>
