made the telephone callable link

--- a/servicing.html
+++ b/servicing.html
@@ -7,7 +7,7 @@ title: Door Step Cycle Servicing as well as walk-in service
 <div class="banner">
 	<h1>Book a Cycle Servicing</h1>
 	<p>@yourDOORSTEP or @CymourSTORE</p>
-	<h1>{{site.phone}}</h1>
+	<h1><a href="tel: {{site.phone}}">{{site.phone}}</a></h1>
 </div>
 <div class="imgbox"><img src="{{site.baseurl}}/img/servicing/tools.jpg" alt=""></div>
 <div class="serviceplans">
