added contact page

--- a/contact.html
+++ b/contact.html
@@ -2,3 +2,37 @@
 layout: default
 title: Contact for Cycle Rentals, Cycle Servicing, Cycle Rides, Cycling Trips, Cycling Events, Cycle Retails
 ---
+<section class="contactus">
+	<h1>Contact US!</h1>
+	<div class="offices">
+		<div class="location">
+			<h2>Cymour Cycling Services</h2>
+			<address>
+			Suyashri, plot 28, s. no. 43<br>
+			Kalpataru Path, Navsahyadri Soc.<br>
+			Karve Nagar, Pune 411052, INDIA.<br>
+			Ph: +91 9527 00 99 22 | +91 77 22 00 24 03<br>
+			Email: admin@cymour.com
+			</address>
+		</div>
+		<div class="location">
+			<h2>Cymour Cycling Retail</h2>
+			<address>
+				Shop no. 123-124, Victoria II<br>
+				Fortaleza Complex, East Av.<br>
+				Kalyani Nagar, Pune 411014, INDIA<br>
+				Ph: +91 9527 00 99 11 | +91 77 22 00 24 05<br>
+				Email: retail@cymour.com
+			</address>
+		</div>
+		<div class="location">
+			<h2>Cymour Warehouse</h2>
+			<address>
+				S. No. 25/6, Near Swami Samarth Mandir<br>
+				Nanded Phata, Pune 411041, INDIA<br>
+				Ph: +91 800 738 2329 | +91 77 22 00 24 07
+			</address>
+		</div>
+		
+	</div>
+</section>
