--- a/rides.html
+++ b/rides.html
@@ -2,4 +2,9 @@
 layout: default
 title: Cycle Rides in and around Pune for children and elders alike!
 ---
-
+<section class="rides">
+	<h1>Join A Cycle Ride</h1>
+	<p>We organize weekly cycle rides for everyone from absolute beginners to advanced riders.<br>
+	<a href="https://docs.google.com/forms/d/1eHw-K38mDGPZmpXcRrpkWOKfReYcLpGJmElpduj1A6w/viewform" target="_blank">Sign Up</a> for regular updates about ride timing and locations etc.</p>
+	<div class="imgbox"><img src="{{site.baseurl}}/img/rides/ride_1.jpg" alt=""></div>
+</section>
