changed bicycle to cycle in both docs.

--- a/rentals.html
+++ b/rentals.html
@@ -5,7 +5,7 @@ short: rentals
 bgimage: rentals/rentals_bg.jpg) no-repeat 100% 0
 ---
 <section class="rentals">
-	<h1>Rent a Bicycle</h1>
+	<h1>Rent a Cycle</h1>
 	<p>We currently rent bicycles from 3 locations in Pune.<br>
 	To check availability of bicycles please call <a href="tel: {{site.phone}}">{{site.phone}}</a></p>
 	<div class="bicycleTypes">
