added telephone links to phone numbers

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@ title: Contact for Cycle Rentals, Cycle Servicing, Cycle Rides, Cycling Trips, C
 			Suyashri, plot 28, s. no. 43<br>
 			Kalpataru Path, Navsahyadri Soc.<br>
 			Karve Nagar, Pune 411052, INDIA.<br>
-			Ph: +91 9527 00 99 22 | +91 77 22 00 24 03<br>
+			Ph: <a href="tel: +91 9527 00 99 22">+91 9527 00 99 22</a> | <a href="tel: +91 77 22 00 24 03">+91 77 22 00 24 03</a><br>
 			Email: admin@cymour.com
 			</address>
 		</div>
@@ -21,7 +21,7 @@ title: Contact for Cycle Rentals, Cycle Servicing, Cycle Rides, Cycling Trips, C
 				Shop no. 123-124, Victoria II<br>
 				Fortaleza Complex, East Av.<br>
 				Kalyani Nagar, Pune 411014, INDIA<br>
-				Ph: +91 9527 00 99 11 | +91 77 22 00 24 05<br>
+				Ph: <a href="tel: +91 9527 00 99 11">+91 9527 00 99 11</a> | <a href="tel: +91 77 22 00 24 05">+91 77 22 00 24 05</a><br>
 				Email: retail@cymour.com
 			</address>
 		</div>
@@ -30,7 +30,7 @@ title: Contact for Cycle Rentals, Cycle Servicing, Cycle Rides, Cycling Trips, C
 			<address>
 				S. No. 25/6, Near Swami Samarth Mandir<br>
 				Nanded Phata, Pune 411041, INDIA<br>
-				Ph: +91 800 738 2329 | +91 77 22 00 24 07
+				Ph: <a href="tel: +91 800 738 2329">+91 800 738 2329</a> | <a href="tel: +91 77 22 00 24 07">+91 77 22 00 24 07</a>
 			</address>
 		</div>
 		
