Added helmet, deposit and id notes.

--- a/rentals.html
+++ b/rentals.html
@@ -14,8 +14,8 @@ bgimage: rentals/rentals_bg.jpg) no-repeat 100% 0
 			<p>6 gears, btwin mybike</p>
 			<a href="{{site.baseurl}}/img/rentals/6gear_btwin.jpg" target="_blank"><img src="{{site.baseurl}}/img/rentals/6gear_btwin.jpg" alt=""></a>
 			<h2>Charges</h2>
-			<p>Monday-Thursday: Rs. 150/- </p>
-			<p>Friday-Sunday: Rs. 250/- </p>
+			<p>Monday-Thursday: Rs. 150/-* </p>
+			<p>Friday-Sunday: Rs. 250/-* </p>
 			<p>Total Quantity: 50 cycles</p>
 		</div>
 		<div class="type">
@@ -23,9 +23,15 @@ bgimage: rentals/rentals_bg.jpg) no-repeat 100% 0
 			<p>21 gears, Schell Dynamic 0.5</p>
 			<a href="{{site.baseurl}}/img/rentals/21gear_dynamic.jpg" target="_blank"><img src="{{site.baseurl}}/img/rentals/21gear_dynamic.jpg" alt=""></a>
 			<h2>Charges</h2>
-			<p>Monday-Thursday: Rs. 250/- </p>
-			<p>Friday-Sunday: Rs. 350/- </p>
+			<p>Monday-Thursday: Rs. 250/-* </p>
+			<p>Friday-Sunday: Rs. 350/-* </p>
 			<p>Total Quantity: 50 cycles</p>
+		</div>
+		<div  class="note">
+			<h2>Your safety is our priority. We provide helmet with every rented cycle at no extra cost.</h2>
+			<p>* Please carry Rs. 2000/- security deposit (refundable) and one original government issued id<br>
+			(pan card, driving license, vote id, adhar card, passport etc.) per rented cycle.
+			</p>
 		</div>
 	</div>
 	<!-- <div class="howtorent">
