--- a/rentals.html
+++ b/rentals.html
@@ -6,8 +6,8 @@ bgimage: rentals/rentals_bg.jpg) no-repeat 100% 0
 ---
 <section class="rentals">
 	<h1>Rent a Cycle</h1>
-	<p>We currently rent bicycles from 3 locations in Pune.<br>
-	To check availability of bicycles please call <a href="tel: {{site.phone}}">{{site.phone}}</a></p>
+	<p>We currently rent cycles from 3 locations in Pune.<br>
+	To check availability of cycles please call <a href="tel: {{site.phone}}">{{site.phone}}</a></p>
 	<div class="bicycleTypes">
 		<div class="type">
 			<h2>Beginners</h2>
