--- a/events.html
+++ b/events.html
@@ -7,8 +7,9 @@ title: Cycling Events for Companies Businesses NGOs
 	<p>
 		We excel in creating world class cycling events. We work with groups and companies on creating various cycling activities customized for their needs. The group can be as small as 10 people and as big as 500+, we can make it happen!
 	</p>
+	<p>For more details contact marketing@cymour.com | <a href="tel: {{site.phone}}">{{site.phone}}</a></p>
 	<div class="imgbox"><img src="{{site.baseurl}}/img/events/slide1.jpg"></div>
-	<p>For more details contact marketing@cymour.com | {{site.phone}}</p>
+	
 	<div class="eventscontainer">
 		<div class="eventbox">
 			<h2>Our Offerings</h2>
