Changed layout to default. Added location names

--- a/rentals.html
+++ b/rentals.html
@@ -1,12 +1,12 @@
 ---
-layout: rentals_layout
+layout: default
 title: Rent a Bicycle in and around Pune
 short: rentals
 bgimage: rentals/rentals_bg.jpg) no-repeat 100% 0
 ---
 <section class="rentals">
 	<h1>Rent a Cycle</h1>
-	<p>We currently rent cycles from 3 locations in Pune.<br>
+	<p>We currently rent cycles from 3 locations (Kalyani Nagar, Karve Nagar and Sinhagad Road) in Pune.<br>
 	To check availability of cycles please call <a href="tel: {{site.phone}}">{{site.phone}}</a></p>
 	<div class="bicycleTypes">
 		<div class="type">
@@ -29,7 +29,8 @@ bgimage: rentals/rentals_bg.jpg) no-repeat 100% 0
 		</div>
 		<div  class="note">
 			<h2>Your safety is our priority. We provide helmet with every rented cycle at no extra cost.</h2>
-			<p>* Please carry Rs. 2000/- security deposit (refundable) and one original government issued id<br>
+			<p>* Rent charges are per day per cycle.<br>
+			Please carry Rs. 2000/- security deposit (refundable) and one original government issued id<br>
 			(pan card, driving license, vote id, adhar card, passport etc.) per rented cycle.
 			</p>
 		</div>
