--- a/rentals.html
+++ b/rentals.html
@@ -6,6 +6,7 @@ bgimage: rentals/rentals_bg.jpg) no-repeat 100% 0
 ---
 <section class="rentals">
 	<h1>Rent a Cycle</h1>
+	<p>@yourDOORSTEP or @CymourLOCATIONS</p>
 	<p>We currently rent cycles from 3 locations (Kalyani Nagar, Karve Nagar and Sinhagad Road) in Pune.<br>
 	To check availability of cycles please call <a href="tel: {{site.phone}}">{{site.phone}}</a></p>
 	<div class="bicycleTypes">
