changed renting locations and doorstep charges and fine print

--- a/rentals.html
+++ b/rentals.html
@@ -7,7 +7,7 @@ bgimage: rentals/rentals_bg.jpg) no-repeat 100% 0
 <section class="rentals">
 	<h1>Rent a Cycle</h1>
 	<p>@yourDOORSTEP or @CymourLOCATIONS</p>
-	<p>We currently rent cycles from 3 locations (Kalyani Nagar, Karve Nagar and Sinhagad Road) in Pune.<br>
+	<p>We rent cycles at your doorstep* and at Cymour office, Karve Nagar, Pune.<br>
 	To check availability of cycles please call <a href="tel: {{site.phone}}">{{site.phone}}</a></p>
 	<div class="bicycleTypes">
 		<div class="type">
@@ -32,7 +32,8 @@ bgimage: rentals/rentals_bg.jpg) no-repeat 100% 0
 			<h2>Your safety is our priority. We provide helmet with every rented cycle at no extra cost.</h2>
 			<p>
 			Please carry Rs. 2000/- security deposit (refundable) and one original government issued id<br>
-			(pan card, driving license, vote id, adhar card, passport etc.) per rented cycle.
+			(pan card, driving license, vote id, adhar card, passport etc.) per rented cycle.<br>
+			* Doorstep delivery and collection charges Rs. 200 per cycle for locations in Pune city.
 			</p>
 		</div>
 	</div>
