changed top line (to rent a cycle)

--- a/rentals.html
+++ b/rentals.html
@@ -8,7 +8,7 @@ bgimage: rentals/rentals_bg.jpg) no-repeat 100% 0
 	<h1>Rent a Cycle</h1>
 	<p>@yourDOORSTEP or @CymourLOCATIONS</p>
 	<p>We rent cycles at your doorstep* and at Cymour office, Karve Nagar, Pune.<br>
-	To check availability of cycles please call <a href="tel: {{site.phone}}">{{site.phone}}</a></p>
+	To rent a cycle please call <a href="tel: {{site.phone}}">{{site.phone}}</a></p>
 	<div class="bicycleTypes">
 		<div class="type">
 			<h2>Beginners</h2>
