changed LOCATIONS to LOCATION

--- a/rentals.html
+++ b/rentals.html
@@ -6,7 +6,7 @@ bgimage: rentals/rentals_bg.jpg) no-repeat 100% 0
 ---
 <section class="rentals">
 	<h1>Rent a Cycle</h1>
-	<p>@yourDOORSTEP or @CymourLOCATIONS</p>
+	<p>@yourDOORSTEP or @CymourLOCATION</p>
 	<p>We rent cycles at your doorstep* and at Cymour office, Karve Nagar, Pune.<br>
 	To rent a cycle please call <a href="tel: {{site.phone}}">{{site.phone}}</a></p>
 	<div class="bicycleTypes">
