--- a/rentals.html
+++ b/rentals.html
@@ -11,7 +11,7 @@ bgimage: rentals/rentals_bg.jpg) no-repeat 100% 0
 	To rent a cycle please call <a href="tel: {{site.phone}}">{{site.phone}}</a></p>
 	<div class="bicycleTypes">
 		<div class="type">
-			<h2>Beginners</h2>
+			<h2>Basic</h2>
 			<p>6 gears, Goldie</p>
 			<a href="{{site.baseurl}}/img/rentals/6gear_goldie.jpg" target="_blank"><img src="{{site.baseurl}}/img/rentals/6gear_goldie.jpg" alt=""></a>
 			<h2>Charges</h2>
@@ -20,7 +20,7 @@ bgimage: rentals/rentals_bg.jpg) no-repeat 100% 0
 			<p>Monthly: Rs. 1600/-</p>
 		</div>
 		<div class="type">
-			<h2>Advanced</h2>
+			<h2>Premium</h2>
 			<p>21 gears, Schell Dynamic 0.5</p>
 			<a href="{{site.baseurl}}/img/rentals/21gear_dynamic.jpg" target="_blank"><img src="{{site.baseurl}}/img/rentals/21gear_dynamic.jpg" alt=""></a>
 			<h2>Charges</h2>
