--- a/servicing.html
+++ b/servicing.html
@@ -6,7 +6,7 @@ title: Door Step Cycle Servicing as well as walk-in service
 
 <div class="banner">
 	<h1>Book a Cycle Servicing</h1>
-	<p>@yourDOORSTEP or @CymourSTORE</p>
+	<p>@yourDOORSTEP</p>
 	<h1><a href="tel: {{site.phone}}">{{site.phone}}</a></h1>
 </div>
 
@@ -14,8 +14,8 @@ title: Door Step Cycle Servicing as well as walk-in service
 	<div class="servicetype">
 		<h2>Platinum (Rs. 1200)</h2>
 		<ul>
-			<li>Gold package</li>
-			<li>Deep Clean (Dismantling & assembly)</li>
+			<li>Gold Package</li>
+			<li>Deep Clean (dismantling & assembly)</li>
 			<li>Hub & Bearings (cleaning & greasing)</li>
 			<li>Bottom Bracket (cleaning & greasing)</li>
 			<li>Gear & Brake Wire (cleaning & oiling)</li>
@@ -36,9 +36,9 @@ title: Door Step Cycle Servicing as well as walk-in service
 		<ul>
 			<li>Brakes Tuneup</li>
 			<li>Gears Tuneup</li>
-			<li>Pre-ride Checks</li>
+			<li>Pre-Ride Checks</li>
 			<li>Safety Checks</li>
-			<li>Nut & Bolt tightening</li>
+			<li>Nut & Bolt Tightening</li>
 		</ul>
 	</div>
 	
