Removed rental location and change "services" to "company"

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@ title: Contact for Cycle Rentals, Cycle Servicing, Cycle Rides, Cycling Trips, C
 	<h1>Contact US!</h1>
 	<div class="offices">
 		<div class="location">
-			<h2>Cymour Cycling Services</h2>
+			<h2>Cymour Cycling Company</h2>
 			<address>
 			Suyashri, plot 28, s. no. 43<br>
 			Kalpataru Path, Navsahyadri Soc.<br>
@@ -15,20 +15,12 @@ title: Contact for Cycle Rentals, Cycle Servicing, Cycle Rides, Cycling Trips, C
 			Email: admin@cymour.com
 			</address>
 		</div>
-		<div class="location">
-			<h2>Cymour Cycling Retail</h2>
-			<address>
-				Shop no. 123-124, Victoria II<br>
-				Fortaleza Complex, East Av.<br>
-				Kalyani Nagar, Pune 411014, INDIA<br>
-				Ph: <a href="tel: +91 9527 00 99 11">+91 9527 00 99 11</a> | <a href="tel: +91 77 22 00 24 05">+91 77 22 00 24 05</a><br>
-				Email: retail@cymour.com
-			</address>
-		</div>
+		
 		<div class="location">
 			<h2>Cymour Warehouse</h2>
 			<address>
-				S. No. 25/6, Near Swami Samarth Mandir<br>
+				S. No. 25/6, <br> 
+				Near Swami Samarth Mandir<br>
 				Nanded Phata, Pune 411041, INDIA<br>
 				Ph: <a href="tel: +91 800 738 2329">+91 800 738 2329</a> | <a href="tel: +91 77 22 00 24 07">+91 77 22 00 24 07</a>
 			</address>
