--- a/rentals.html
+++ b/rentals.html
@@ -7,14 +7,14 @@ bgimage: rentals/rentals_bg.jpg) no-repeat 100% 0
 <section class="rentals">
 	<h1>Rent a Cycle</h1>
 	<p>@yourDOORSTEP or @CymourLOCATION</p>
-	<p>We rent cycles at your doorstep* and at Cymour office, Karve Nagar, Pune.<br>
+	<p>We rent cycles at your doorstep and at Cymour office, Karve Nagar, Pune.<br>
 	To rent a cycle please call <a href="tel: {{site.phone}}">{{site.phone}}</a></p>
 	<div class="bicycleTypes">
 		<div class="type">
 			<h2>Basic</h2>
 			<p>6 gears, Goldie</p>
 			<a href="{{site.baseurl}}/img/rentals/6gear_goldie.jpg" target="_blank"><img src="{{site.baseurl}}/img/rentals/6gear_goldie.jpg" alt=""></a>
-			<h2>Charges</h2>
+			<h2>Charges*</h2>
 			<p>Daily: Rs. 200/-</p>
 			<p>Weekly: Rs. 800/-</p>
 			<p>Monthly: Rs. 1600/-</p>
@@ -23,7 +23,7 @@ bgimage: rentals/rentals_bg.jpg) no-repeat 100% 0
 			<h2>Premium</h2>
 			<p>21 gears, Schell Dynamic 0.5</p>
 			<a href="{{site.baseurl}}/img/rentals/21gear_dynamic.jpg" target="_blank"><img src="{{site.baseurl}}/img/rentals/21gear_dynamic.jpg" alt=""></a>
-			<h2>Charges</h2>
+			<h2>Charges*</h2>
 			<p>Daily: Rs. 350/-</p>
 			<p>Weekly: Rs. 1500/-</p>
 			<p>Monthly: Rs. 2800/-</p>
@@ -33,7 +33,7 @@ bgimage: rentals/rentals_bg.jpg) no-repeat 100% 0
 			<p>
 			Please carry Rs. 2000/- security deposit (refundable) and one original government issued id<br>
 			(pan card, driving license, vote id, adhar card, passport etc.) per rented cycle.<br>
-			* Doorstep delivery and collection charges Rs. 200 per cycle for locations in Pune city.
+			* Doorstep delivery and collection charges Rs. 200 per cycle for locations in Pune city.<br>* Government taxes as applicable.
 			</p>
 		</div>
 	</div>
