changed contact email

--- a/events.html
+++ b/events.html
@@ -7,7 +7,7 @@ title: Cycling Events for Companies Businesses NGOs
 	<p>
 		We excel in creating world class cycling events. We work with groups and companies on creating various cycling activities customized for their needs. The group can be as small as 10 people and as big as 500+, we can make it happen!
 	</p>
-	<p>For more details contact marketing@cymour.com | <a href="tel: {{site.phone}}">{{site.phone}}</a></p>
+	<p>For more details contact <a href="mailto:events@cymour.com">events@cymour.com</a> | <a href="tel: {{site.phone}}">{{site.phone}}</a></p>
 	<div class="imgbox"><img src="{{site.baseurl}}/img/events/slide1.jpg"></div>
 	
 	<div class="eventscontainer">
