Excellent to professional

--- a/events.html
+++ b/events.html
@@ -15,8 +15,8 @@ title: Cycling Events for Companies Businesses NGOs
 			<h2>Our Offerings</h2>
 			<ul>
 				<li>Cycle Rallies</li>
+				<li>Cycle Rentals</li>
 				<li>Short and Long Rides</li>
-				<li>Cycle Day</li>
 				<li>Heritage Cycle Rides</li>
 				<li>Cycle Expos</li>
 				<li>Cyclothons/Marathons</li>
@@ -27,7 +27,7 @@ title: Cycling Events for Companies Businesses NGOs
 			<h2>Our Expertise</h2>
 			<ul>
 				<li>Custom Event Design</li>
-				<li>Excellent Execution</li>
+				<li>Professional Execution</li>
 				<li>Cycling Experts</li>
 				<li>Heritage Experts</li>
 				<li>Police Permissions</li>
