--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@ layout: default
 title: Contact for Cycle Rentals, Cycle Servicing, Cycle Rides, Cycling Trips, Cycling Events, Cycle Retails
 ---
 <section class="contactus">
-	<h1>Contact US!</h1>
+	<h1>Contact Us</h1>
 	<div class="offices">
 		<div class="location">
 			<h2>Cymour Cycling Company</h2>
@@ -12,11 +12,11 @@ title: Contact for Cycle Rentals, Cycle Servicing, Cycle Rides, Cycling Trips, C
 			Kalpataru Path, Navsahyadri Soc.<br>
 			Karve Nagar, Pune 411052, INDIA.<br>
 			Ph: <a href="tel: +91 9527 00 99 22">+91 9527 00 99 22</a> | <a href="tel: +91 77 22 00 24 03">+91 77 22 00 24 03</a><br>
-			Email: admin@cymour.com
+			Email: <a href="mailto:admin@cymour.com">admin@cymour.com</a>
 			</address>
 		</div>
 		
-		<div class="location">
+		<!-- <div class="location">
 			<h2>Cymour Warehouse</h2>
 			<address>
 				S. No. 25/6, <br> 
@@ -24,7 +24,7 @@ title: Contact for Cycle Rentals, Cycle Servicing, Cycle Rides, Cycling Trips, C
 				Nanded Phata, Pune 411041, INDIA<br>
 				Ph: <a href="tel: +91 800 738 2329">+91 800 738 2329</a> | <a href="tel: +91 77 22 00 24 07">+91 77 22 00 24 07</a>
 			</address>
-		</div>
+		</div> -->
 		
 	</div>
 </section>
