changed background image.

--- a/rentals.html
+++ b/rentals.html
@@ -2,7 +2,7 @@
 layout: default
 title: Rent a Bicycle in and around Pune
 short: rentals
-bgimage: rentals/rentals_bg.jpg) no-repeat 100% 0
+# bgimage: rentals/rentals_bg.jpg) no-repeat 100% 0
 ---
 <section class="rentals">
 	<h1>Rent a Cycle</h1>
