Changed servicing image.

--- a/servicing.html
+++ b/servicing.html
@@ -43,6 +43,6 @@ title: Door Step Cycle Servicing as well as walk-in service
 	</div>
 	
 </div>
-<div class="imgbox"><img src="{{site.baseurl}}/img/servicing/tools.jpg" alt=""></div>
+<div class="imgbox"><img src="{{site.baseurl}}/img/servicing/servicing.jpg" alt=""></div>
 </section>
 
