--- a/rentals.html
+++ b/rentals.html
@@ -15,25 +15,27 @@ short: rentals
 			<p>6 gears, Goldie</p>
 			<a href="{{site.baseurl}}/img/rentals/6gear_goldie.jpg" target="_blank"><img src="{{site.baseurl}}/img/rentals/6gear_goldie.jpg" alt=""></a>
 			<h2>Charges*</h2>
-			<p>Daily: Rs. 200/-</p>
-			<p>Weekly: Rs. 800/-</p>
-			<p>Monthly: Rs. 1600/-</p>
+			<p>Daily: Rs. 250/-</p>
+			<p>Weekly: Rs. 1000/-</p>
+			<p>BiWeekly: Rs. 1500/-</p>
+			<p>Monthly: Rs. 2000/-</p>
 		</div>
 		<div class="type">
 			<h2>Premium</h2>
 			<p>21 gears, Schell Dynamic 0.5</p>
 			<a href="{{site.baseurl}}/img/rentals/21gear_dynamic.jpg" target="_blank"><img src="{{site.baseurl}}/img/rentals/21gear_dynamic.jpg" alt=""></a>
 			<h2>Charges*</h2>
-			<p>Daily: Rs. 350/-</p>
+			<p>Daily: Rs. 400/-</p>
 			<p>Weekly: Rs. 1500/-</p>
-			<p>Monthly: Rs. 2800/-</p>
+			<p>BiWeekly: Rs. 2500/-</p>
+			<p>Monthly: Rs. 3000/-</p>
 		</div>
 		<div  class="note">
 			<h2>Your safety is our priority. We provide helmet with every rented cycle at no extra cost.</h2>
 			<p>
 			Please carry Rs. 2000/- security deposit (refundable) and one original government issued id<br>
 			(pan card, driving license, vote id, adhar card, passport etc.) per rented cycle.<br>
-			* Doorstep delivery and collection charges Rs. 200 per cycle for locations in Pune city.<br>* Government taxes as applicable.
+			* Doorstep delivery and collection charges Rs. 200 per cycle for upto 10 cycles and Rs. 150 per cycle for more than 10 cycles (for locations in Pune city.)<br>* Government taxes as applicable.
 			</p>
 		</div>
 	</div>
