added terms and conditions apply

--- a/rentals.html
+++ b/rentals.html
@@ -35,7 +35,7 @@ short: rentals
 			<p>
 			Please carry Rs. 2000/- security deposit (refundable) and one original government issued id<br>
 			(pan card, driving license, vote id, adhar card, passport etc.) per rented cycle.<br>
-			* Doorstep delivery and collection charges Rs. 200 per cycle for upto 10 cycles and Rs. 150 per cycle for more than 10 cycles (for locations in Pune city.)<br>* Government taxes as applicable.
+			* Doorstep delivery and collection charges Rs. 200 per cycle for upto 10 cycles and Rs. 150 per cycle for more than 10 cycles (for locations in Pune city.)<br>* Government taxes as applicable. Terms and conditions apply.
 			</p>
 		</div>
 	</div>
